# code-bunnies-02

./: .gitignore  .goosehints  Cargo.toml  Dockerfile  Makefile.toml  justfile
.cargo/: config.toml
.cargo/templates/code-bunnies-crate/: Cargo.toml  cargo-generate.toml
.github/workflows/: rust-coverage.yml  workspaces.yml
config/: providers.toml
crates/aiprovider/: Cargo.toml
crates/alcatraz/: Cargo.toml
crates/alcatraz/src/: lib.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs  main.rs  project.rs
crates/builder/src/prompts/: build-prompt-builder.md  build_prompt_builder.rs  mod.rs
crates/builder/src/providers/: config.rs  mod.rs  models.rs  openai.rs  provider.rs  providers.rs
crates/builder/src/tools/: agent_response.rs  fs.rs  memory.rs  mod.rs
crates/config/: Cargo.toml
crates/prelude/: Cargo.toml
crates/prompt-builder/: Cargo.toml  README.md
crates/prompt-builder/src/: agent.rs  formatters.rs  lib.rs  main.rs  project.rs  prompt.rs
crates/prompt-builder/src/examples/: basic_usage.rs  mod.rs  template_usage.rs
crates/tools/: Cargo.toml
crates/tools/ai-templates/: inst.jinja  md.jinja
crates/tools/src/: commit.rs  init.rs  llm_response.rs  prompt.rs  split_diff.rs
docs/: task-01-plan.md  task-01.md  task-02.md
docs/libs/: addr2line.json.md  adler2.json.md  aho_corasick.json.md  aiprovider.json.md  alcatraz.json.md  anstream.json.md  anstyle.json.md  anstyle_parse.json.md  anstyle_query.json.md  anyhow.json.md  arraydeque.json.md  arrayref.json.md  async_trait.json.md  atomic_waker.json.md  backtrace.json.md  base64.json.md  better_panic.json.md  bidiff.json.md  bipatch.json.md  bitflags.json.md  block_buffer.json.md  bon.json.md  bon_macros.json.md  bytecheck.json.md  bytecheck_derive.json.md  bytecount.json.md  byteorder.json.md  bytes.json.md  camino.json.md  cargo_metadata.json.md  cargo_platform.json.md  cb_builder.json.md  cfg_if.json.md  chrono.json.md  clap.json.md  clap_builder.json.md  clap_derive.json.md  clap_lex.json.md  colorchoice.json.md  colored.json.md  (+275 more)
