[workspace]
members = [ "crates/*"]
resolver = "3"
[workspace.dependencies]
anyhow = "1"
better_default = "1"
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
openai-api-rs = "6.0.3"
futures = "0.3.31"
file-retriever = "0.1.1"
names = { version = "0.14.0", default-features = false }
schemars = { version = "0.8", features = ["chrono", "derive", "raw_value"] }
strum = "0.27"
strum_macros = "0.27"
indoc = "2.0.5"
spinoff = { version = "0.8.0", features = ["dots"] }
async-trait = "0.1.83"
minijinja = "2"
shlex = "1.3"
trauma = "2.2.6"
files-diff = "0.1.1"
console = "0.15.11"
rmcp = { version = "0.1", features = ["server"] }

tempdir = "0.3.7"
hf-hub = "0.4.2"
[workspace.package]
edition = "2024"
rust-version = "1.88.0"
authors = ["Michał Lipiński"]
homepage = "https://github.com/mi4uu/code-bunnies"
repository = "https://github.com/mi4uu/code-bunnies"
description = "Code Bunnies - A collection of code generation tools for Rust"
license = "do-not-use"

[workspace.lints]
clippy = {}

[workspace.dependencies.dirs]
version = "6"

[workspace.dependencies.regex]
version = "1"

[workspace.dependencies.config]
version = "0.15.11"
features = ["toml", "ron"]


[workspace.dependencies.bon]
version = "3.5"

[workspace.dependencies.clap]
version = "4.3"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.12.3"
features = ["json"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.29"
features = ["full"]


