[package]
name = "aiprovider"
description = "aiprovider for  Code Bunnies"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
config.workspace = true
serde.workspace = true
reqwest.workspace = true

[lints]
workspace = true
