[package]
name = "alcatraz"
description = "alcatraz for Code Bunnies"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
better-panic = { version = "0.3.0", optional = true }
cargo_metadata = "0.19.2"
config.workspace = true
pretty_assertions = { version = "1.4.1", optional = true }
serde.workspace = true
tempfile = "3.19.1"
anyhow.workspace = true
[lints]
workspace = true

[features]
default = ["dev", "better_panic", "pretty_assertions"]
dev = []
release = []
better_panic = ["dep:better-panic"]
regex = []
pretty_assertions = ["dep:pretty_assertions"]
