[package]
name = "cb-builder"
description = "builder for  Code Bunnies"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
config.workspace = true
serde.workspace = true
openai-api-rs.workspace = true
tokio.workspace = true
serde_json.workspace = true
names.workspace = true
toml.workspace = true
reqwest.workspace = true
strum_macros.workspace = true
strum.workspace = true
schemars.workspace = true
tempdir.workspace = true
files-diff.workspace = true
anyhow.workspace = true
[lints]
workspace = true


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "runcode"
path = "src/coderun.rs"
