[package]
name = "tools"
description = "tools for Code Bunnies"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
config.workspace = true
serde.workspace = true
dirs.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
spinoff.workspace = true
minijinja.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
file-retriever.workspace = true
shlex.workspace = true
trauma.workspace = true
console.workspace = true
hf-hub.workspace = true
rustdoc-md = "0.1.0"

[dependencies.mistralrs]
git = "https://github.com/EricLBuehler/mistral.rs.git"
branch = "master"
version = "0.5.0"
optional = true
default-features = false
features = []

[dev-dependencies]
mockito = "1.2.0"

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "commit"
path = "src/commit.rs"

[lints]
workspace = true

[features]
default = []
mistral = ["dep:mistralrs"]
metal = ["mistralrs/metal", "mistralrs/accelerate"]
